--- a/user-rest-service/src/main/resources/application.properties
+++ b/user-rest-service/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 springdoc.swagger-ui.path=/swagger-ui
+springdoc.api-docs.path=/api-docs
 #http://localhost:8080/swagger-ui/index.html - to check all the URL's
